@@ -38,6 +38,7 @@
     * move job_id into the EEPROM
     * make STOP_PRINT wait for any of the READY, STOPPED or FINISHED states
     * Implementation of new Transfer object from SDK
+    * Make a centralised wizard activation condition
 
 
 0.5.1 (2021-07-16)
